--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 .logo-image{ width: 100px; height: 100px;
 }
 
+a{
+  color: black;
+}
+
 .fa {
   padding: 10px;
   font-size: 30px;
@@ -11,6 +15,15 @@
   text-decoration: none;
   border-radius: 8px;
   display: inline;
+}
+.h1 {
+  color: navy;
+}
+.button{
+  height: 40px;
+  width:  150px;
+  font-size: 20px;
+  color: #0d3f5e;
 }
 
 .fa:hover {
@@ -37,36 +50,59 @@
   color: white;
 }
 
-
-
-/* Style the video: 100% width and height to cover the entire window */
-#myVideo {
-  position: fixed;
-  width: 100%;
-  height: 50%;
+.bg-dark{
+ background-color: #FFFFFF!important;
 }
 
-/* Add some content at the bottom of the video/page */
-/*.content {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  color: #f1f1f1;
-  width: 100%;
-  padding: 20px;
+.navbar-dark .navbar-nav .nav-link {
+    color: #0ca766;
+}
+.nav-item{
+ font-size:20px;
+}
 
-
-
-
-
-  #myVideo {
+#myVideo {
   position: fixed;
   right: 0;
   bottom: 0;
   min-width: 100%;
-  min-height: 50%;
+  min-height: 100%;
+  opacity: .2;
 }
-}*/
+
+.content {
+  text-align: center;
+  position: fixed;
+  color: #0d3f5e;
+  height: 100%;
+  width: 100%;
+  margin-top: 300px;
+  padding: 20px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.questionare{
+  margin-top: 200px;
+  margin-left: 20px;
+  margin-bottom: 200px;
+}
+
+.quizTitle{
+  text-align: center;
+  color: #0d3f5e;
+}
+
+.question{
+  color: #0ca766;
+  font-size: 20px;
+}
+
+.answer{
+  color: ##0d3f5e;
+  font-size: 10px;
+}
 
 .footer {
   position: fixed;
@@ -83,18 +119,3 @@
   flex: 1;
   padding-top:20px;
 }
-/* Style the button used to pause/play the video 
-#myBtn {
-  width: 200px;
-  font-size: 18px;
-  padding: 10px;
-  border: none;
-  background: #000;
-  color: #fff;
-  cursor: pointer;
-}
-
-#myBtn:hover {
-  background: #ddd;
-  color: black;
-}*/
